[CHI-170] Fix z-index issues in component examples

--- a/src/chi/components/header/header.scss
+++ b/src/chi/components/header/header.scss
@@ -14,7 +14,6 @@
     min-height: 4rem;
     padding: .75rem 1rem;
     width: 100%;
-    z-index: 1;
     @include respond-to(sm) {
       height: 4rem;
       padding: 0 1rem;
